# RAZIELPP

./: .gitignore  CMakeLists.txt  Info.plist
include/: CaptureThread.h  NDVIApp.h
src/: CaptureThread.cpp  NDVIApp.cpp  main.cpp
